--- a/css/userprofilestyle.css
+++ b/css/userprofilestyle.css
@@ -186,7 +186,7 @@ padding-top:5px;
   color:black;
 text-align: center;
 }
-.topicsinfo1{
+.topicsinfo1,.topicsinfo2{
   background-color: lightyellow;
   color:black;
 }
