--- a/css/quizPlayer.css
+++ b/css/quizPlayer.css
@@ -112,6 +112,7 @@ body{
 .score{
   padding-top: 15px;
 }
+
 #scoreBoard{
   position: absolute;
   top: 50%;
@@ -122,4 +123,21 @@ body{
   font-weight: bolder;
   opacity: 0;
   text-align: center;
+}
+@media (min-width: 1200px) {
+    body{
+      background-color: white;
+      height: 500px;
+    }
+  .container{
+    border-style: solid;
+    border-width: medium;
+    border-color: #AE5;
+    background-color: #DDD;
+    width: 30%;
+    margin-left: 35%;
+    margin-right: 35%;
+    border-radius: 20px;
+    padding: 20px;
+  }
 }
