--- a/css/quizPlayer.css
+++ b/css/quizPlayer.css
@@ -26,14 +26,14 @@ col-xs-12 img{
 }
 
 #questionInfoPanel h4{
-    text-align: center;
-    border-width:thin;
-    border-style:solid;
-    border-color: black;
-    border-radius: 10px;
-    padding: 10px;
-    height: 28%;
-    margin: 0%;
+  text-align: center;
+  border-width:thin;
+  border-style:solid;
+  border-color: black;
+  border-radius: 10px;
+  padding: 10px;
+  height: 28%;
+  margin: 0%;
 }
 #questionInfoPanel{
   height: 100%;
@@ -78,10 +78,10 @@ body{
   color: rgb(254, 0, 0);
 }
 .img-circle{
-    width: 38%;
-    border-width:thin;
-    border-style:solid;
-    border-color: black;
+  width: 38%;
+  border-width:thin;
+  border-style:solid;
+  border-color: black;
 }
 #statusInfo{
   height: 8%;
@@ -90,9 +90,9 @@ body{
   height: 58%;
 }
 .navbar{
-    height: 8%;
-    margin-top: 2%;
-    margin-bottom: 4%;
+  height: 8%;
+  margin-top: 2%;
+  margin-bottom: 4%;
 }
 .myStatus{
   padding-left: 0px;
@@ -126,19 +126,23 @@ body{
   text-align: center;
 }
 @media (min-width: 1200px) {
-    body{
-      background-color: white;
-      height: 500px;
-    }
+  body{
+    background-color: white;
+    height: 500px;
+  }
   .container{
     border-style: solid;
     border-width: medium;
-    border-color: #AE5;
+    border-color: #AAA;
     background-color: #DDD;
     width: 30%;
     margin-left: 35%;
     margin-right: 35%;
     border-radius: 20px;
     padding: 20px;
+  }
+  #questionInfoPanel h4{
+    border-color: #AAA;
+    border-width: medium;
   }
 }
