Final Leadership update

--- a/css/leaderboard.css
+++ b/css/leaderboard.css
@@ -24,16 +24,17 @@
 
 .head{
   background-color: #B6B6B4;
-  height: 85px;
+  height: 80px;
   border-radius: 5px;
   border-style: solid;
   border-width: thin;
   border-color: #787878;
+  font-weight: bold;
 }
 
 .players{
   background-color: #E5E4E2;
-  height: 85px;
+  height: 80px;
   border-radius: 5px;
   border-style: solid;
   border-width: 0px thin thin thin;
