--- a/css/userprofilestyle.css
+++ b/css/userprofilestyle.css
@@ -79,7 +79,6 @@ p{
    top:0;
    right:13px;
    width:50px;
-   height: 25px;
    font-size: 18px;
 
  }
@@ -88,7 +87,6 @@ p{
    top:0;
    right:13px;
    width:50px;
-   height: 25px;
    font-size: 18px;
 
  }
@@ -144,14 +142,14 @@ p{
   background-color:red;
   text-align:center;
   color:white;
-  height: 40px;
+  height: 10%;
   font-size: 35px;
 
 }
 #Name{
   background-color:rgb(67, 73, 74);
   text-align:center;
-  height: 60px;
+  height: 10%;
   color:white;
   font-size:24px;
    padding-bottom: 10px;
@@ -169,7 +167,7 @@ p{
 #Games{
   background-color:black;
   text-align:center;
-  height: 35px;
+  height: 10%;
   color:white;
   font-size:24px;
 }
@@ -182,7 +180,7 @@ padding-top:5px;
 #topics{
   background-color:lightyellow;
   font-size:23px;
-  height:30px;
+  height:10%;
   color:black;
 text-align: center;
 }
@@ -193,26 +191,26 @@ text-align: center;
 
 
 #button-height{
-  height:85px;
+  height:10%;
 }
 #button-height .btn1 {
   background-color: green;
   color:white;
 
-  height:85px;
+  height:10%;
 }
 
 #button-height .btn2 {
   background-color: red;
   color:white;
 
-  height:85px;
+  height:10%;
 }
 #button-height .btn3 {
   background-color: rgb(194, 214, 29);
   color:white;
 
-   height:85px;
+   height:10%;
 }
 
 #button-height a
