--- a/views/quizSummary.ejs
+++ b/views/quizSummary.ejs
@@ -55,10 +55,10 @@
     </div>
     <div class="row">
       <div class="col-xs-6 col-sm-6 myPadding">
-        <a type="button" class="btn btn-large btn-success btn-block myPadding" id="correct-answers">Home</a>
+        <a type="button" class="btn btn-large btn-success btn-block myPadding" id="correct-answers" href="/">Home</a>
       </div>
       <div class="col-xs-6 col-sm-6 myPadding">
-        <a type="button" class="btn btn-large btn-danger btn-block myPadding" id="incorrect-answers">Rematch</a>
+        <a type="button" class="btn btn-large btn-danger btn-block myPadding" id="incorrect-answers" href = "/topic-play">Rematch</a>
       </div>
     </div>
   </div>
