--- a/views/topic-play.ejs
+++ b/views/topic-play.ejs
@@ -82,7 +82,7 @@
   <div class=" row container topic-column2">
 
     <div class="col-xs-6 leaderboard">
-      <a href="">
+      <a href="/leaderboard">
         <div>
         <img src="images/userProfileImages/win.png" alt="">
         </div>
@@ -107,7 +107,7 @@
 
   <div class="play-button">
     <div>
-  <button class="btn-success">Play ----></button>
+  <a href="/quizPlayer" ><button class="btn-success" >Play ----></button></a>
   </div>
 
 </div><!--end content-->
