--- a/views/topics-main.ejs
+++ b/views/topics-main.ejs
@@ -42,7 +42,7 @@
 
 			 <h4 class ="topic-category-name col-xs-9 pull-left ">Topic Category Name</h4>
 
-			 <a href="category.html" " class="col-xs-3 btn btn-default more-button pull-right">More..</a>
+			 <a href="/category" " class="col-xs-3 btn btn-default more-button pull-right">More..</a>
 
        </div>
 
@@ -53,7 +53,7 @@
 
 				 <div class="topic col-xs-3">
 					 <div class="topic-icon">
-						 <a href=""><img src="images/topics/category1.png" alt=""></a>
+						 <a href="/topic-play"><img src="images/topics/category1.png" alt=""></a>
 					 </div><!--end topic-icon-->
 
 <div>
@@ -67,7 +67,7 @@
 
 				 <div class="topic col-xs-3">
 					 <div class="topic-icon">
-						 <a href=""><img src="images/topics/category1.png" alt=""></a>
+						 <a href="/topic-play"><img src="images/topics/category1.png" alt=""></a>
 					 </div><!--end topic-icon-->
 
 						 <a href=""><span class="topic-name">Hello World</span><br/></a>
@@ -77,7 +77,7 @@
 
 				 <div class="topic col-xs-3">
 					 <div class="topic-icon">
-						 <a href=""><img src="images/topics/category1.png" alt=""></a>
+						 <a href="/topic-play"><img src="images/topics/category1.png" alt=""></a>
 					 </div><!--end topic-icon-->
 							<div>
 						 <a href=""><span class="topic-name">Hello World</span><br/></a>
@@ -89,7 +89,7 @@
 
 				 <div class="topic col-xs-3">
 					 <div class="topic-icon">
-						 <a href=""><img src="images/topics/category1.png" alt=""></a>
+						 <a href="/topic-play"><img src="images/topics/category1.png" alt=""></a>
 					 </div><!--end topic-icon-->
 
 						 <a href=""><span class="topic-name">Hello World</span><br/></a>
@@ -99,7 +99,7 @@
 
 				 <div class="topic col-xs-3">
 					 <div class="topic-icon">
-						 <a href=""><img src="images/topics/category1.png" alt=""></a>
+						 <a href="/topic-play"><img src="images/topics/category1.png" alt=""></a>
 					 </div><!--end topic-icon-->
 
 						 <a href=""><span class="topic-name">Hello World</span><br/></a>
@@ -120,7 +120,7 @@
 
 			 <h4 class ="topic-category-name col-xs-9 pull-left ">Topic Category Name</h4>
 
-			 <a href="category.html" class="col-xs-3 btn btn-default more-button pull-right">More..</a>
+			 <a href="/category" class="col-xs-3 btn btn-default more-button pull-right">More..</a>
 
        </div>
 
@@ -131,7 +131,7 @@
 
 				 <div class="topic col-xs-3">
 					 <div class="topic-icon">
-						 <a href=""><img src="images/topics/category1.png" alt=""></a>
+						 <a href="/topic-play"><img src="images/topics/category1.png" alt=""></a>
 					 </div><!--end topic-icon-->
 
 					 <div>
@@ -145,7 +145,7 @@
 
 				 <div class="topic col-xs-3">
 					 <div class="topic-icon">
-						 <a href=""><img src="images/topics/category1.png" alt=""></a>
+						 <a href="/topic-play"><img src="images/topics/category1.png" alt=""></a>
 					 </div><!--end topic-icon-->
 
 						 <a href=""><span class="topic-name">Hello World</span><br/></a>
@@ -155,7 +155,7 @@
 
 				 <div class="topic col-xs-3">
 					 <div class="topic-icon">
-						 <a href=""><img src="images/topics/category1.png" alt=""></a>
+						 <a href="/topic-play"><img src="images/topics/category1.png" alt=""></a>
 					 </div><!--end topic-icon-->
 
 						 <a href=""><span class="topic-name">Hello World</span><br/></a>
@@ -165,7 +165,7 @@
 
 				 <div class="topic col-xs-3">
 					 <div class="topic-icon">
-						 <a href=""><img src="images/topics/category1.png" alt=""></a>
+						 <a href="/topic-play"><img src="images/topics/category1.png" alt=""></a>
 					 </div><!--end topic-icon-->
 
 						 <a href=""><span class="topic-name">Hello World</span><br/></a>
@@ -175,7 +175,7 @@
 
 				 <div class="topic col-xs-3">
 					 <div class="topic-icon">
-						 <a href=""><img src="images/topics/category1.png" alt=""></a>
+						 <a href="/topic-play"><img src="images/topics/category1.png" alt=""></a>
 					 </div><!--end topic-icon-->
 
 						 <a href=""><span class="topic-name">Hello World</span><br/></a>
@@ -197,7 +197,7 @@
 
 			 <h4 class ="topic-category-name col-xs-9 pull-left ">Topic Category Name</h4>
 
-			 <a href="category.html" class="col-xs-3 btn btn-default more-button pull-right">More..</a>
+			 <a href="/category" class="col-xs-3 btn btn-default more-button pull-right">More..</a>
 
 				</div>
 
@@ -208,7 +208,7 @@
 
 				 <div class="topic col-xs-3">
 					 <div class="topic-icon">
-						 <a href=""><img src="images/topics/category1.png" alt=""></a>
+						 <a href="/topic-play"><img src="images/topics/category1.png" alt=""></a>
 					 </div><!--end topic-icon-->
 
 					 <div>
@@ -222,7 +222,7 @@
 
 				 <div class="topic col-xs-3">
 					 <div class="topic-icon">
-						 <a href=""><img src="images/topics/category1.png" alt=""></a>
+						 <a href="/topic-play"><img src="images/topics/category1.png" alt=""></a>
 					 </div><!--end topic-icon-->
 
 						 <a href=""><span class="topic-name">Hello World</span><br/></a>
@@ -232,7 +232,7 @@
 
 				 <div class="topic col-xs-3">
 					 <div class="topic-icon">
-						 <a href=""><img src="images/topics/category1.png" alt=""></a>
+						 <a href="/topic-play"><img src="images/topics/category1.png" alt=""></a>
 					 </div><!--end topic-icon-->
 
 						 <a href=""><span class="topic-name">Hello World</span><br/></a>
@@ -242,7 +242,7 @@
 
 				 <div class="topic col-xs-3">
 					 <div class="topic-icon">
-						 <a href=""><img src="images/topics/category1.png" alt=""></a>
+						 <a href="/topic-play"><img src="images/topics/category1.png" alt=""></a>
 					 </div><!--end topic-icon-->
 
 						 <a href=""><span class="topic-name">Hello World</span><br/></a>
@@ -252,7 +252,7 @@
 
 				 <div class="topic col-xs-3">
 					 <div class="topic-icon">
-						 <a href=""><img src="images/topics/category1.png" alt=""></a>
+						 <a href="/topic-play"><img src="images/topics/category1.png" alt=""></a>
 					 </div><!--end topic-icon-->
 
 						 <a href=""><span class="topic-name">Hello World</span><br/></a>
@@ -273,7 +273,7 @@
 
 			 <h4 class ="topic-category-name col-xs-9 pull-left ">Topic Category Name</h4>
 
-			 <a href="category.html" class="col-xs-3 btn btn-default more-button pull-right">More..</a>
+			 <a href="/category" class="col-xs-3 btn btn-default more-button pull-right">More..</a>
 
 				</div>
 
@@ -284,7 +284,7 @@
 
 				 <div class="topic col-xs-3">
 					 <div class="topic-icon">
-						 <a href=""><img src="images/topics/category1.png" alt=""></a>
+						 <a href="/topic-play"><img src="images/topics/category1.png" alt=""></a>
 					 </div><!--end topic-icon-->
 
 					 <div>
@@ -298,7 +298,7 @@
 
 				 <div class="topic col-xs-3">
 					 <div class="topic-icon">
-						 <a href=""><img src="images/topics/category1.png" alt=""></a>
+						 <a href="/topic-play"><img src="images/topics/category1.png" alt=""></a>
 					 </div><!--end topic-icon-->
 
 						 <a href=""><span class="topic-name">Hello World</span><br/></a>
@@ -308,7 +308,7 @@
 
 				 <div class="topic col-xs-3">
 					 <div class="topic-icon">
-						 <a href=""><img src="images/topics/category1.png" alt=""></a>
+						 <a href="/topic-play"><img src="images/topics/category1.png" alt=""></a>
 					 </div><!--end topic-icon-->
 
 						 <a href=""><span class="topic-name">Hello World</span><br/></a>
@@ -318,7 +318,7 @@
 
 				 <div class="topic col-xs-3">
 					 <div class="topic-icon">
-						 <a href=""><img src="images/topics/category1.png" alt=""></a>
+						 <a href="/topic-play"><img src="images/topics/category1.png" alt=""></a>
 					 </div><!--end topic-icon-->
 
 						 <a href=""><span class="topic-name">Hello World</span><br/></a>
@@ -328,7 +328,7 @@
 
 				 <div class="topic col-xs-3">
 					 <div class="topic-icon">
-						 <a href=""><img src="images/topics/category1.png" alt=""></a>
+						 <a href="/topic-play"><img src="images/topics/category1.png" alt=""></a>
 					 </div><!--end topic-icon-->
 
 						 <a href=""><span class="topic-name">Hello World</span><br/></a>
@@ -349,7 +349,7 @@
 
 			 <h4 class ="topic-category-name col-xs-9 pull-left ">Topic Category Name</h4>
 
-			 <a href="category.html" class="col-xs-3 btn btn-default more-button pull-right">More..</a>
+			 <a href="/category" class="col-xs-3 btn btn-default more-button pull-right">More..</a>
 
 				</div>
 
@@ -360,7 +360,7 @@
 
 				 <div class="topic col-xs-3">
 					 <div class="topic-icon">
-						 <a href=""><img src="images/topics/category1.png" alt=""></a>
+						 <a href="/topic-play"><img src="images/topics/category1.png" alt=""></a>
 					 </div><!--end topic-icon-->
 
 					 <div>
@@ -374,7 +374,7 @@
 
 				 <div class="topic col-xs-3">
 					 <div class="topic-icon">
-						 <a href=""><img src="images/topics/category1.png" alt=""></a>
+						 <a href="/topic-play"><img src="images/topics/category1.png" alt=""></a>
 					 </div><!--end topic-icon-->
 
 						 <a href=""><span class="topic-name">Hello World</span><br/></a>
@@ -384,7 +384,7 @@
 
 				 <div class="topic col-xs-3">
 					 <div class="topic-icon">
-						 <a href=""><img src="images/topics/category1.png" alt=""></a>
+						 <a href="/topic-play"><img src="images/topics/category1.png" alt=""></a>
 					 </div><!--end topic-icon-->
 
 						 <a href=""><span class="topic-name">Hello World</span><br/></a>
@@ -394,7 +394,7 @@
 
 				 <div class="topic col-xs-3">
 					 <div class="topic-icon">
-						 <a href=""><img src="images/topics/category1.png" alt=""></a>
+						 <a href="/topic-play"><img src="images/topics/category1.png" alt=""></a>
 					 </div><!--end topic-icon-->
 
 						 <a href=""><span class="topic-name">Hello World</span><br/></a>
@@ -404,7 +404,7 @@
 
 				 <div class="topic col-xs-3">
 					 <div class="topic-icon">
-						 <a href=""><img src="images/topics/category1.png" alt=""></a>
+						 <a href="/topic-play"><img src="images/topics/category1.png" alt=""></a>
 					 </div><!--end topic-icon-->
 
 						 <a href=""><span class="topic-name">Hello World</span><br/></a>
