Added all the route modules

--- a/views/topic-play.ejs
+++ b/views/topic-play.ejs
@@ -82,7 +82,7 @@
   <div class=" row container topic-column2">
 
     <div class="col-xs-6 leaderboard">
-      <a href="/leaderboard">
+      <a href="topics/leaderboard">
         <div>
         <img src="images/userProfileImages/win.png" alt="">
         </div>
