added some changes to route file

--- a/views/topics-main.ejs
+++ b/views/topics-main.ejs
@@ -197,82 +197,6 @@
 
 			 <h4 class ="topic-category-name col-xs-9 pull-left ">Topic Category Name</h4>
 
-			 <a href="/topics/category" class="col-xs-3 btn btn-default more-button pull-right">More..</a>
-
-				</div>
-
-				<div class="row topics-container">
-
-
-				 <div class="topics-container-inside">
-
-				 <div class="topic col-xs-3">
-					 <div class="topic-icon">
-						 <a href="/topicsHandler/topic-play"><img src="images/topics/category1.png" alt=""></a>
-					 </div><!--end topic-icon-->
-
-					 <div>
-						<a href=""><span class="topic-name">Hello World</span><br/></a>
-					 </div>
-
-						 <div>
-						 <a href=""><span class="category-name">Hello World</span></a>
-							</div>
-				 </div><!--end topic-->
-
-				 <div class="topic col-xs-3">
-					 <div class="topic-icon">
-						 <a href="/topicsHandler/topic-play"><img src="images/topics/category1.png" alt=""></a>
-					 </div><!--end topic-icon-->
-
-						 <a href=""><span class="topic-name">Hello World</span><br/></a>
-						 <a href=""><span class="category-name">Hello World</span></a>
-
-				 </div><!--end topic-->
-
-				 <div class="topic col-xs-3">
-					 <div class="topic-icon">
-						 <a href="/topicsHandler/topic-play"><img src="images/topics/category1.png" alt=""></a>
-					 </div><!--end topic-icon-->
-
-						 <a href=""><span class="topic-name">Hello World</span><br/></a>
-						 <a href=""><span class="category-name">Hello World</span></a>
-
-				 </div><!--end topic-->
-
-				 <div class="topic col-xs-3">
-					 <div class="topic-icon">
-						 <a href="topicsHandler/topic-play"><img src="images/topics/category1.png" alt=""></a>
-					 </div><!--end topic-icon-->
-
-						 <a href=""><span class="topic-name">Hello World</span><br/></a>
-						 <a href=""><span class="category-name">Hello World</span></a>
-
-				 </div><!--end topic-->
-
-				 <div class="topic col-xs-3">
-					 <div class="topic-icon">
-						 <a href="/topicsHandler/topic-play"><img src="images/topics/category1.png" alt=""></a>
-					 </div><!--end topic-icon-->
-
-						 <a href=""><span class="topic-name">Hello World</span><br/></a>
-						 <a href=""><span class="category-name">Hello World</span></a>
-
-				 </div><!--end topic-->
-
-			 </div><!--end topics-container-inside-->
-
-			</div><!--end topics-container-->
-
-
-		 </div><!--end collection-widget-->
-
-		 <div class="row collection-widget">
-
-			 <div class="row">
-
-			 <h4 class ="topic-category-name col-xs-9 pull-left ">Topic Category Name</h4>
-
 			 <a href="/topicsHandler/category" class="col-xs-3 btn btn-default more-button pull-right">More..</a>
 
 				</div>
@@ -284,7 +208,7 @@
 
 				 <div class="topic col-xs-3">
 					 <div class="topic-icon">
-						 <a href="/topics/topic-play"><img src="images/topics/category1.png" alt=""></a>
+						 <a href="/topicsHandler/topic-play"><img src="images/topics/category1.png" alt=""></a>
 					 </div><!--end topic-icon-->
 
 					 <div>
@@ -360,7 +284,7 @@
 
 				 <div class="topic col-xs-3">
 					 <div class="topic-icon">
-						 <a href="/topicshandler/topic-play"><img src="images/topics/category1.png" alt=""></a>
+						 <a href="/topicsHandler/topic-play"><img src="images/topics/category1.png" alt=""></a>
 					 </div><!--end topic-icon-->
 
 					 <div>
@@ -384,7 +308,7 @@
 
 				 <div class="topic col-xs-3">
 					 <div class="topic-icon">
-						 <a href="topicsHandler/topic-play"><img src="images/topics/category1.png" alt=""></a>
+						 <a href="/topicsHandler/topic-play"><img src="images/topics/category1.png" alt=""></a>
 					 </div><!--end topic-icon-->
 
 						 <a href=""><span class="topic-name">Hello World</span><br/></a>
@@ -394,7 +318,83 @@
 
 				 <div class="topic col-xs-3">
 					 <div class="topic-icon">
-						 <a href="topicsHandler/topic-play"><img src="images/topics/category1.png" alt=""></a>
+						 <a href="/topicsHandler/topic-play"><img src="images/topics/category1.png" alt=""></a>
+					 </div><!--end topic-icon-->
+
+						 <a href=""><span class="topic-name">Hello World</span><br/></a>
+						 <a href=""><span class="category-name">Hello World</span></a>
+
+				 </div><!--end topic-->
+
+				 <div class="topic col-xs-3">
+					 <div class="topic-icon">
+						 <a href="/topicsHandler/topic-play"><img src="images/topics/category1.png" alt=""></a>
+					 </div><!--end topic-icon-->
+
+						 <a href=""><span class="topic-name">Hello World</span><br/></a>
+						 <a href=""><span class="category-name">Hello World</span></a>
+
+				 </div><!--end topic-->
+
+			 </div><!--end topics-container-inside-->
+
+			</div><!--end topics-container-->
+
+
+		 </div><!--end collection-widget-->
+
+		 <div class="row collection-widget">
+
+			 <div class="row">
+
+			 <h4 class ="topic-category-name col-xs-9 pull-left ">Topic Category Name</h4>
+
+			 <a href="/topicsHandler/category" class="col-xs-3 btn btn-default more-button pull-right">More..</a>
+
+				</div>
+
+				<div class="row topics-container">
+
+
+				 <div class="topics-container-inside">
+
+				 <div class="topic col-xs-3">
+					 <div class="topic-icon">
+						 <a href="/topicsHandler/topic-play"><img src="images/topics/category1.png" alt=""></a>
+					 </div><!--end topic-icon-->
+
+					 <div>
+						<a href=""><span class="topic-name">Hello World</span><br/></a>
+					 </div>
+
+						 <div>
+						 <a href=""><span class="category-name">Hello World</span></a>
+							</div>
+				 </div><!--end topic-->
+
+				 <div class="topic col-xs-3">
+					 <div class="topic-icon">
+						 <a href="/topicsHandler/topic-play"><img src="images/topics/category1.png" alt=""></a>
+					 </div><!--end topic-icon-->
+
+						 <a href=""><span class="topic-name">Hello World</span><br/></a>
+						 <a href=""><span class="category-name">Hello World</span></a>
+
+				 </div><!--end topic-->
+
+				 <div class="topic col-xs-3">
+					 <div class="topic-icon">
+						 <a href="/topicsHandler/topic-play"><img src="images/topics/category1.png" alt=""></a>
+					 </div><!--end topic-icon-->
+
+						 <a href=""><span class="topic-name">Hello World</span><br/></a>
+						 <a href=""><span class="category-name">Hello World</span></a>
+
+				 </div><!--end topic-->
+
+				 <div class="topic col-xs-3">
+					 <div class="topic-icon">
+						 <a href="/topicsHandler/topic-play"><img src="images/topics/category1.png" alt=""></a>
 					 </div><!--end topic-icon-->
 
 						 <a href=""><span class="topic-name">Hello World</span><br/></a>
