changes in toutes

--- a/views/userprofile.ejs
+++ b/views/userprofile.ejs
@@ -293,7 +293,7 @@
 							<a type="button" class="btn">Home</a>
 						</div>
 						<div class="col-xs-4 btn2">
-							<a type="button" class="btn" href="topicsHandler/topics-main">Play it</a>
+							<a type="button" class="btn" href="topicsHandler">Play it</a>
 						</div>
 						<div class="col-xs-4 btn3">
 							<a type="button" class="btn">Activity</a>
