File Names changed in category and topic pages

--- a/views/topic-play.ejs
+++ b/views/topic-play.ejs
@@ -29,7 +29,7 @@
   <hr>
   <div class="row topic-column">
 
-    <div class="col-xs-6 topic-icon  ">
+    <div class="col-xs-6 topic-icon">
 
       <img src="/images/topics/cricket.png"  class="img-responsive" alt="">
 
@@ -120,7 +120,7 @@
 
 <script src="/js/jquery-2.1.4.js"></script>
 
-<script src="/js/topic-play-js.js"></script>
+<script src="/js/topic-play.js"></script>
 
 </body>
 </html>
