--- a/views/category.ejs
+++ b/views/category.ejs
@@ -27,7 +27,7 @@
  <div class="content">
  <div class="row topic-row">
 
-   
+
 
 </div><!--end row-topic-->
 
@@ -41,7 +41,7 @@
 
 <script src="js/jquery-2.1.4.js"></script>
 
-<script src="js/category-js.js"></script>
+<script src="js/category.js"></script>
 
 </body>
 </html>
