--- a/views/topics-main.ejs
+++ b/views/topics-main.ejs
@@ -432,7 +432,7 @@
 
 	<script src="/js/jquery-2.1.4.js"></script>
 
-	<script src="/js/topics-main-js.js"></script>
+	<script src="/js/topics-main.js"></script>
 
 </div><!--end content-->
 
