mongoose connections made

--- a/views/quizPlayer.ejs
+++ b/views/quizPlayer.ejs
@@ -40,21 +40,15 @@
 
     <div class="row" id="questionInfo">
       <div class="col-xs-12 col-sm-12" id="questionInfoPanel">
-        <h4><strong>This is a sample question</strong></h4>
+        <h4><strong></strong></h4>
         <!-- <img src="akshay.jpg" alt=""> -->
       </div>
     </div><!-- end question info -->
 
     <div class="row myRow">
-      <!-- <div class="col-xs-6 col-sm-6 myOptions">
-      <button type="button" class="btn btn-1 btn-large btn-default btn-block" id="option1">OPTION A</button>
+
     </div>
-    <div class="col-xs-6 col-sm-6 myOptions">
-    <button type="button" class="btn btn-1 btn-large btn-default btn-block" id="option2">OPTION B</button>
-  </div>
-  <div class="col-xs-6 col-sm-6 myOptions">
-  <button type="button" class="btn btn-1 btn-large btn-default btn-block" id="option2">OPTION B</button>
-</div> -->
+
 </div><!--End Answers -->
 
 </div><!-- end container -->
