--- a/views/userprofile.ejs
+++ b/views/userprofile.ejs
@@ -9,7 +9,7 @@
 		<!-- Mobile viewport optimized -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-			<script src="js/jquery-2.1.4.js"></script>
+			<script src="/js/jquery-2.1.4.js"></script>
 		<!-- Bootstrap CSS -->
 		<link href="/css/bootstrap.min.css" rel="stylesheet">
 		<link href="/css/bootstrap-glyphicons.css" rel="stylesheet">
@@ -76,19 +76,19 @@
 		</div>
 		<div class="row" id="GamesInfo">
 			<div class="col-xs-2 col-xs-offset-1" id="win">
-				<img  src ="images/userProfileImages/win.png" class="img-circle img-responsive" height="150px">
+				<img  src ="/images/userProfileImages/win.png" class="img-circle img-responsive" height="150px">
 
 				<p>Wins</br>
 					</p>
 				</div>
 				<div class="col-xs-2 col-xs-offset-2" id="loss">
-					<img src ="images/userProfileImages/loss.png" class="img-circle img-responsive" height="150px">
+					<img src ="/images/userProfileImages/loss.png" class="img-circle img-responsive" height="150px">
 
 					<p>Losses</br>
 						</p>
 					</div>
 					<div class="col-xs-2 col-xs-offset-2" id="winpercentage">
-						<img  src ="images/userProfileImages/winpercent.png" class="img-circle img-responsive" height="150px">
+						<img  src ="/images/userProfileImages/winpercent.png" class="img-circle img-responsive" height="150px">
 
 						<p>Win%<br>
 							</p>
@@ -306,7 +306,7 @@
 				</div> <!-- end container -->
 
 
-	<script src="js/jquery-2.1.4.js"></script>
+	<script src="/js/jquery-2.1.4.js"></script>
 
 				<!-- All Javascript at the bottom of the page for faster page loading -->
 
@@ -317,11 +317,15 @@
 
 				<!-- Bootstrap JS -->
 
-				<script src="js/bootstrap.min.js"></script>
+				<script src="/js/bootstrap.min.js"></script>
 
 
 				<!-- Custom JS -->
-				<script src="js/userprofile.js"></script>
+				<script src="/js/userprofile.js"></script>
+
+				<script>
+					$(document).ready(loadUserProfile("<%= userId %>"));
+				</script>
 
 			</body>
 			</html>
