--- a/public/css/userprofilestyle.css
+++ b/public/css/userprofilestyle.css
@@ -1,200 +1,199 @@
-
 p{
   text-align: center;
 }
- @media (max-width:550px){
-   h4{font-size: 10px;}
-   h6{
-     font-size:8px;
-   }
-   h2{font-size:24px;}
-   h3{font-size: 18px;}
-    #button-height a{
-     font-size:20px;
-   }
-   .topicsinfo .badge{
-     position: absolute;
-     top:0;
-     right:6px;
-     width:20px;
-     font-size: 8px;
-   }
 
-   .Followinfo
-   {
+@media (max-width:550px){
+  h4{font-size: 10px;}
 
-     color:white;
+  h6{
+    font-size:8px;
+  }
 
-   }
+  h2{font-size:24px;}
 
-    #badge,#country,
-   {
-     font-size: 15px;
-   }
-   .Following,.Followers,.game
-    {
-      font-size: 15px;
-      margin-bottom: 5px;
-    }
-    #UserName
-    {
-      padding-right: 3px;
-      border-right: 1px pink solid;
-      font-size: 15px;
-    }
-    .topicsinfo .col-xs-2 .topic{
+  h3{font-size: 18px;}
 
-      font-size: 9px;
-   }
-    .topicsinfo .col-xs-2 .wins{
+  #button-height a{
+    font-size:20px;
+  }
 
-      font-size: 7px;
-      font-weight: bold;
-    }
+  .topicsinfo .badge{
+    position: absolute;
+    top:0;
+    right:6px;
+    width:20px;
+    font-size: 8px;
+  }
 
- }
+  .Followinfo{
+    color:white;
+  }
+
+  #badge,#country,{
+    font-size: 15px;
+  }
+
+  .Following,.Followers,.game{
+    font-size: 15px;
+    margin-bottom: 5px;
+  }
+
+  #UserName{
+    padding-right: 3px;
+    border-right: 1px pink solid;
+    font-size: 15px;
+  }
+
+  .topicsinfo .col-xs-2 .topic{
+    font-size: 9px;
+  }
+
+  .topicsinfo .col-xs-2 .wins{
+    font-size: 7px;
+    font-weight: bold;
+  }
+}
+
 @media(min-width:550px){
 
   h4,h6{font-size: 16px;}
+
   p{font-size:18px;}
+
   #button-height a{
-   font-size:20px;
- }
- .topicsinfo .badge{
-   position: absolute;
-   top:0;
-   right:13px;
-   width:50px;
-   font-size: 18px;
+    font-size:20px;
+  }
 
- }
+  .topicsinfo .badge{
+    position: absolute;
+    top:0;
+    right:13px;
+    width:50px;
+    font-size: 18px;
+  }
 
- .Followinfo
- {
+  .Followinfo{
+    color:white;
+    padding-left: 140px;
+  }
 
-   color:white;
-   padding-left: 140px;
- }
- .topicsinfo .col-xs-2 .topic{
+  .topicsinfo .col-xs-2 .topic{
+    font-size: 16px;
+    padding-left:2px;
+  }
 
-   font-size: 16px;
-   padding-left:2px;
- }
- .topicsinfo .col-xs-2 .wins{
+  .topicsinfo .col-xs-2 .wins{
+    margin-left: 0;
+    font-size: 14px;
+    font-weight: bold;
+  }
 
-   margin-left: 0;
-   font-size: 14px;
-   font-weight: bold;
- }
- 
+  #badge,#country{
+    font-size: 20px;
+  }
 
-  #badge,#country
- {
-   font-size: 20px;
- }
-.Following,.Followers,.game
- {
-   font-size: 20px;
-   margin-bottom: 7px;
- }
- #UserName
- {
-   padding-right: 3px;
-   border-right: 1px  red solid;
-   font-size: 20px;
- }
+  .Following,.Followers,.game{
+    font-size: 20px;
+    margin-bottom: 7px;
+  }
 
+  #UserName{
+    padding-right: 3px;
+    border-right: 1px  red solid;
+    font-size: 20px;
+  }
 } /* end media queries */
 
+  #Quizzer{
+    background-color:red;
+    text-align:center;
+    color:white;
+    height: 10%;
+    font-size: 35px;
 
-#Quizzer{
-  background-color:red;
-  text-align:center;
-  color:white;
-  height: 10%;
-  font-size: 35px;
+  }
 
-}
-#Name{
-  background-color:rgb(67, 73, 74);
-  text-align:center;
-  height: 10%;
-  color:white;
-  font-size:24px;
-   padding-bottom: 10px;
+  #Name{
+    background-color:rgb(67, 73, 74);
+    text-align:center;
+    height: 10%;
+    color:white;
+    font-size:24px;
+    padding-bottom: 10px;
+  }
 
-}
-#Name #profile{
-  display:inline !important;
-  text-align: center;
-}
-#info{
+  #Name #profile{
+    display:inline !important;
+    text-align: center;
+  }
 
-  background-color:rgb(67, 73, 74);
-  color:white;
-}
-#Games{
-  background-color:black;
-  text-align:center;
-  height: 10%;
-  color:white;
-  font-size:24px;
-}
+  #info{
+    background-color:rgb(67, 73, 74);
+    color:white;
+  }
 
-#GamesInfo{
-padding-top:5px;
-  background-color: black;
-  color:white;
-}
-#topics{
-  background-color:lightyellow;
-  font-size:23px;
-  height:10%;
-  color:black;
-text-align: center;
-}
-.topicsinfo1,.topicsinfo2{
-  background-color: lightyellow;
-  color:black;
-}
+  #Games{
+    background-color:black;
+    text-align:center;
+    height: 10%;
+    color:white;
+    font-size:24px;
+  }
 
+  #GamesInfo{
+    padding-top:5px;
+    background-color: black;
+    color:white;
+  }
 
-#button-height{
-  height:10%;
-}
-#button-height .btn1 {
-  background-color: green;
-  color:white;
+  #topics{
+    background-color:lightyellow;
+    font-size:23px;
+    height:10%;
+    color:black;
+    text-align: center;
+  }
 
-  height:10%;
-}
+  .topicsinfo1,.topicsinfo2{
+    background-color: lightyellow;
+    color:black;
+  }
 
-#button-height .btn2 {
-  background-color: red;
-  color:white;
+  #button-height{
+    height:10%;
+  }
 
-  height:10%;
-}
-#button-height .btn3 {
-  background-color: rgb(194, 214, 29);
-  color:white;
+  #button-height .btn1 {
+    background-color: green;
+    color:white;
 
-   height:10%;
-}
+    height:10%;
+  }
 
-#button-height a
-{
-  width:100%;
-  color:white;
-  font-size: 27px;
-}
+  #button-height .btn2 {
+    background-color: red;
+    color:white;
 
-.usermiddle
-{
+    height:10%;
+  }
 
-  border-right: 2px red solid;
-  color:white;
-}
-.user{
-  background-color:rgb(67, 73, 74);
-}
+  #button-height .btn3 {
+    background-color: rgb(194, 214, 29);
+    color:white;
+    height:10%;
+  }
+
+  #button-height a{
+    width:100%;
+    color:white;
+    font-size: 27px;
+  }
+
+  .usermiddle{
+    border-right: 2px red solid;
+    color:white;
+  }
+
+  .user{
+    background-color:rgb(67, 73, 74);
+  }
