--- a/views/quizPlayer.ejs
+++ b/views/quizPlayer.ejs
@@ -59,12 +59,17 @@
 <!-- <script type="text/javascript" src="bootstrap/js/modernizr-2.6.2.min.js"></script> -->
 <script type="text/javascript"  src="js/bootstrap.min.js"></script>
 <script type="text/javascript"  src="js/quizPlayer.js"></script>
-
+<script src="/socket.io/socket.io.js"></script>
 <script>
-    var socket = io.connect('http://localhost:3000');
+    var socket = io('http://localhost:3000');
     socket.on('connect', function(data) {
+        console.log("socket to client connected");
         socket.emit('join', 'Hello World from client');
+        socket.on('messages', function(data) {
+                console.log(data);
+        });
     });
+
 </script>
 </body>
 </html>
