--- a/views/topics-main.ejs
+++ b/views/topics-main.ejs
@@ -197,7 +197,7 @@
 
 			 <h4 class ="topic-category-name col-xs-9 pull-left ">Topic Category Name</h4>
 
-			 <a href="/topics/category" class="col-xs-3 btn btn-default more-button pull-right">More..</a>
+			 <a href="/topicsHandler/category" class="col-xs-3 btn btn-default more-button pull-right">More..</a>
 
 				</div>
 
