--- a/views/category.ejs
+++ b/views/category.ejs
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
   <!-- Bootstrap CSS -->
-  <script src="js/jquery-2.1.4.js"></script>
+  <script src="/js/jquery-2.1.4.js"></script>
 
-  <link href="css/bootstrap.css" rel="stylesheet">
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/category-style.css" rel="stylesheet">
+  <link href="/css/bootstrap.css" rel="stylesheet">
+  <link href="/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/css/category-style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -35,13 +35,13 @@
 
   </div>
   <!-- Bootstrap JS -->
-  <script src="js/bootstrap.min.js"></script>
+  <script src="/js/bootstrap.min.js"></script>
 
   <!-- Custom JS -->
 
-  <script src="js/jquery-2.1.4.js"></script>
+  <script src="/js/jquery-2.1.4.js"></script>
 
-  <script src="js/category.js"></script>
+  <script src="/js/category.js"></script>
 
 </body>
 </html>
