--- a/views/quizPlayer.ejs
+++ b/views/quizPlayer.ejs
@@ -59,7 +59,7 @@
 <!-- <script type="text/javascript" src="bootstrap/js/modernizr-2.6.2.min.js"></script> -->
 <script type="text/javascript"  src="js/bootstrap.min.js"></script>
 <script type="text/javascript"  src="js/quizPlayer.js"></script>
-<script src="/socket.io/socket.io.js"></script>
+<script type="text/javascript"  src="js/socket-io-1.3.7.js"></script>
 <script>
     var socket = io.connect('http://192.168.1.28:3000');
     socket.on('connect', function(data) {
@@ -69,6 +69,7 @@
 
     socket.on('not_enough',function(data){
       console.log(data);
+      playerNotEnough(data);
     });
     socket.on('startGame', function(data){
       console.log(data);
