--- a/views/quizSummary.ejs
+++ b/views/quizSummary.ejs
@@ -67,7 +67,7 @@
   <!-- <script type="text/javascript" src="bootstrap/js/modernizr-2.6.2.min.js"></script> -->
   <script type="text/javascript"  src="js/bootstrap.min.js"></script>
   <script type="text/javascript"  src="js/quizSummary.js"></script>
-  <script src="/socket.io/socket.io.js"></script>
+  <script type="text/javascript"  src="js/socket-io-1.3.7.js"></script>
   <script>
       var socket = io.connect('http://192.168.28:3000');
       socket.on('connect', function(data) {
