--- a/views/userprofile.ejs
+++ b/views/userprofile.ejs
@@ -292,7 +292,7 @@
 					<a type="button" class="btn">Home</a>
 				</div>
 				<div class="col-xs-4 btn2">
-					<a type="button" class="btn" href="/topicsHandler">Play it</a>
+					<a id = "topicHandler" type="button" class="btn">Play it</a>
 				</div>
 				<div class="col-xs-4 btn3">
 					<a type="button" class="btn">Activity</a>
