--- a/views/userprofile.ejs
+++ b/views/userprofile.ejs
@@ -94,191 +94,39 @@
 				Followed Topics
 			</div>
 		</div>
-		<div class="row topicsinfo" >
-			<div class="col-xs-2 topicholder">
+		<div class="row topicsinfo"  ng-if="{{profile.data.topicsPlayed.length}}>6" >
+			<div class="col-xs-2 topicholder" ng-repeat="i in [0,1,2,3,4,5]" ng-show="{{profile.data.topicsPlayed[i].isFollowed}}">
 				<div>
-					<a href="#"><img  class="img-rounded img-responsive" height="150px"></a>
+					<a href="#"><img ng-src="{{profile.data.topicsPlayed[i].topicIcon}}" class="img-rounded img-responsive" height="150px"></a>
 				</div>
 				<div class="row">
 					<div class="col-xs-12 col-sm-8">
-						<span class="topic"></span>
+						<span class="topic">{{profile.data.topicsPlayed[i].topicName}}</span>
 					</div>
 					<div class="col-xs-12 col-sm-4">
-						<span class="wins"></span>
+						<span class="wins">{{profile.data.topicsPlayed[i].gamesWon}}+"/"+{{profile.data.topicsPlayed[i].gamesPlayed}}</span>
 					</div>
 				</div>
-				<span class="badge"></span>
-			</div>
-
-			<div class="col-xs-2 topicholder">
-				<div>
-					<a href="#"><img  class="img-rounded img-responsive" height="150px"></a>
-				</div>
-				<div class="row">
-					<div class="col-xs-12 col-sm-8">
-						<span class="topic"></span>
-					</div>
-					<div class="col-sm-4 col-xs-12">
-						<span class="wins"></span>
-					</div>
-				</div>
-				<span class="badge"></span>
-			</div>
-			<div class="col-xs-2 topicholder">
-				<div>
-					<a href="#"><img  class="img-rounded img-responsive" height="150px"></a>
-				</div>
-				<div class="row">
-					<div class="col-xs-12 col-sm-8">
-						<span class="topic"></span>
-					</div>
-					<div class="col-sm-4 col-xs-12">
-						<span class="wins"></span>
-					</div>
-				</div>
-				<span class="badge"></span>
-			</div>
-
-			<div class="col-xs-2 topicholder">
-				<div>
-					<a href="#"><img  class="img-rounded img-responsive" height="150px"></a>
-				</div>
-				<div class="row">
-					<div class="col-xs-12 col-sm-8">
-						<span class="topic"></span>
-					</div>
-					<div class="col-sm-4 col-xs-12">
-						<span class="wins "></span>
-					</div>
-				</div>
-				<span class="badge"></span>
-
-			</div>
-
-			<div class="col-xs-2 topicholder">
-				<div>
-					<a href="#"><img  class="img-rounded img-responsive" height="150px"></a>
-				</div>
-				<div class="row">
-					<div class="col-sm-8 col-xs-12">
-						<span class="topic"></span>
-					</div>
-
-					<div class="col-sm-4 col-xs-12">
-						<span class="wins"></span>
-					</div>
-				</div>
-				<span class="badge"></span>
-
-			</div>
-			<div class="col-xs-2 topicholder">
-				<div>
-					<a href="#"><img  class="img-rounded img-responsive" height="150px"></a>
-				</div>
-				<div class="row">
-					<div class="col-xs-12 col-sm-8">
-						<span class="topic"></span>
-					</div>
-					<div class="col-xs-12 col-sm-4">
-						<span class="wins"></span>
-					</div>
-				</div>
-				<span class="badge"></span>
+				<span class="badge">{{profile.data.topicsPlayed[i].level}}</span>
 			</div>
 		</div> <!-- end topicinfo row -->
-		<div class="row topicsinfo">
-			<div class="col-xs-2 topicholder">
+		<div class="row topicsinfo"  ng-if="{{profile.data.topicsPlayed.length}}>6 && {{profile.data.topicsPlayed.length}}>12" ng-repeat="i in [0,1,2,3,4,5]">
+			<div class="col-xs-2 topicholder" ng-show="{{profile.data.topicsPlayed.isFollowed}}" >
 				<div>
-					<a href="#"><img  class="img-rounded img-responsive" height="150px"></a>
+					<a href="#"><img ng-src="{{profile.data.topicsPlayed[i].topicIcon}}"  class="img-rounded img-responsive" height="150px"></a>
 				</div>
 				<div class="row">
 					<div class="col-xs-12 col-sm-8">
-						<span class="topic"></span>
+						<span class="topic">{{profile.data.topicsPlayed[i].topicName}}</span>
 					</div>
 					<div class="col-xs-12 col-sm-4">
-						<span class="wins"></span>
+						<span class="wins">{{profile.data.topicsPlayed[i].gamesWon}}+"/"+{{profile.data.topicsPlayed[i].gamesPlayed}}</span>
 					</div>
 				</div>
-				<span class="badge"></span>
-			</div>
-			<div class="col-xs-2 topicholder">
-				<div>
-					<a href="#"><img  class="img-rounded img-responsive" height="150px"></a>
-				</div>
-				<div class="row">
-					<div class="col-xs-12 col-sm-8">
-						<span class="topic"></span>
-					</div>
-					<div class="col-xs-12 col-sm-4">
-						<span class="wins"></span>
-					</div>
-				</div>
-				<span class="badge"></span>
-			</div>
-			<div class="col-xs-2 topicholder">
-				<div>
-					<a href="#"><img  class="img-rounded img-responsive" height="150px"></a>
-				</div>
-				<div class="row">
-					<div class="col-xs-12 col-sm-8">
-						<span class="topic"></span>
-					</div>
-					<div class="col-xs-12 col-sm-4">
-						<span class="wins"></span>
-					</div>
-				</div>
-				<span class="badge"></span>
-
-			</div>
-			<div class="col-xs-2 topicholder">
-				<div>
-					<a href="#"><img  class="img-rounded img-responsive" height="150px"></a>
-				</div>
-				<div class="row">
-					<div class="col-xs-12 col-sm-8">
-						<span class="topic"></span>
-					</div>
-					<div class="col-xs-12 col-sm-4">
-						<span class="wins"></span>
-					</div>
-				</div>
-				<span class="badge"></span>
-			</div>
-
-			<div class="col-xs-2 topicholder">
-				<div>
-					<a href="#"><img  class="img-rounded img-responsive" height="150px"></a>
-				</div>
-				<div class="row">
-					<div class="col-xs-12 col-sm-8">
-						<span class="topic"></span>
-					</div>
-					<div class="col-xs-12 col-sm-4">
-						<span class="wins"></span>
-					</div>
-				</div>
-				<span class="badge"></span>
-
-			</div>
-			<div class="col-xs-2 topicholder">
-
-				<div>
-					<a href="#"><img  class="img-rounded img-responsive" height="150px"></a>
-				</div>
-				<div class="row">
-					<div class="col-xs-12 col-sm-8">
-						<span class="topic"></span>
-					</div>
-					<div class="col-xs-12 col-sm-4">
-						<span class="wins"></span>
-					</div>
-				</div>
-				<span class="badge"></span>
-
+				<span class="badge">{{profile.data.topicsPlayed[i].level}}</span>
 			</div>
 		</div>  <!--end topicsinfo row-->
 		<div class="newrows">
-
 		</div>
 
 		<div>
