changes in quiz player

--- a/views/quizPlayer.ejs
+++ b/views/quizPlayer.ejs
@@ -8,7 +8,7 @@
   <title>Document</title>
 </head>
 <body>
-  <div class="container" id="main">
+  <div  class="container" id="main">
     <div class="navbar">
       <div class="row">
         <div class="col-sm-5 col-xs-5 pull-left myStatus">
@@ -16,7 +16,7 @@
           <img src="/images/userProfileImages/akshayk.jpg" alt="" class="img-circle pull-left"/>
           <h5 class="score pull-left" id="top-score">0</h5>
         </div>
-        <div id="timer" class="col-sm-2 col-xs-2 myStatus"></div>
+        <div   id="timer" class="col-sm-2 col-xs-2 myStatus"></div>
 
         <div class="pull-right col-sm-5 col-xs-5 myStatus">
           <h5 class="score pull-right" id="myScore">0</h5>
@@ -45,7 +45,7 @@
       </div>
     </div><!-- end question info -->
 
-    <div class="row myRow">
+    <div  class="row myRow">
 
     </div>
 
@@ -68,7 +68,7 @@
       var socket = io.connect('http://172.23.238.186:3000');
       socket.on('connect', function(data) {
           console.log("socket to client connected");
-          socket.emit('join', 'Hi I am about to joining the game');
+          socket.emit('join', name + ' is about to joining the game');
       });
 
       socket.on('not_enough',function(data){
