--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,7 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
 	</head>
 	<body>
+		hello
 			<div ng-view>
 			</div>
 	</body>
